<package>

  <name>cv</name>
  <version>0.1.0</version>
  <description>Computer vision code for Temple WaterfOWLS 2017 roboboat project</description>
  <maintainer email="gabriella.suarez@temple.edu">PR-foobar</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
